@@ -1,3 +1,5 @@
+* Make compileSelector() compile context specific functions, but only cache those from contexts that match the host document type. [Diego Perini, jddalton]
+
 * Tweak byId(), avoid byTag() when possible, fix minor `RE_SIMPLE_SELECTOR` regression, and simplify gEBN bug checks. [jddalton]
 
 * Remove `this` dependency from setQSA() and rename `RE_BUGGY_QSAPI` to `RE_BUGGY_QSA`. [Diego Perini, jddalton]
